--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,16 @@
     "require-dev": {
         "amphp/parallel-functions": "~1.0.0",
         "composer/installers": "^2.0",
+        "drupal/address": "^1.10",
+        "drupal/composite_reference": "^2.1",
         "drupal/config_devel": "^1.8",
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-dev": "^9.2",
+        "drupal/description_list_field": "^1.0@alpha",
+        "drupal/entity_reference_revisions": "^1.9",
+        "drupal/field_group": "^3.2",
         "drupal/file_link": "^2.0.4",
+        "drupal/typed_link": "^2.0",
         "drush/drush": "^10.3",
         "egulias/email-validator": "^2.1.22 || ^3.0",
         "openeuropa/code-review": "^1.6 || ^2.0",
