--- a/modules/oe_content_extra_project/config/install/field.field.node.oe_project.oe_cx_impacts.yml
+++ b/modules/oe_content_extra_project/config/install/field.field.node.oe_project.oe_cx_impacts.yml
@@ -2,12 +2,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_impacts
+    - field.storage.node.oe_cx_impacts
     - node.type.oe_project
   module:
     - text
-id: node.oe_project.field_impacts
-field_name: field_impacts
+id: node.oe_project.oe_cx_impacts
+field_name: oe_cx_impacts
 entity_type: node
 bundle: oe_project
 label: Impacts
