--- a/modules/oe_content_extra_project/config/install/field.storage.node.oe_cx_impacts.yml
+++ b/modules/oe_content_extra_project/config/install/field.storage.node.oe_cx_impacts.yml
@@ -4,8 +4,8 @@ dependencies:
   module:
     - node
     - text
-id: node.field_impacts
-field_name: field_impacts
+id: node.oe_cx_impacts
+field_name: oe_cx_impacts
 entity_type: node
 type: text_long
 settings: {  }
