--- a/modules/oe_content_extra_project/config/overrides/core.entity_form_display.node.oe_project.default.yml
+++ b/modules/oe_content_extra_project/config/overrides/core.entity_form_display.node.oe_project.default.yml
@@ -3,10 +3,10 @@ status: true
 dependencies:
   config:
     - field.field.node.oe_project.body
-    - field.field.node.oe_project.field_achievements_and_milestone
-    - field.field.node.oe_project.field_gallery
-    - field.field.node.oe_project.field_impacts
-    - field.field.node.oe_project.field_objective
+    - field.field.node.oe_project.oe_cx_achievements_and_milestone
+    - field.field.node.oe_project.oe_cx_gallery
+    - field.field.node.oe_project.oe_cx_impacts
+    - field.field.node.oe_project.oe_cx_objective
     - field.field.node.oe_project.oe_departments
     - field.field.node.oe_project.oe_documents
     - field.field.node.oe_project.oe_featured_media
@@ -17,7 +17,7 @@ dependencies:
     - field.field.node.oe_project.oe_project_coordinators
     - field.field.node.oe_project.oe_project_dates
     - field.field.node.oe_project.oe_project_funding_programme
-    - field.field.node.oe_project.oe_project_lead_contributors
+    - field.field.node.oe_project.oe_cx_project_lead_contributors
     - field.field.node.oe_project.oe_project_locations
     - field.field.node.oe_project.oe_project_participants
     - field.field.node.oe_project.oe_project_result_files
@@ -107,7 +107,7 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_achievements_and_milestone:
+  oe_cx_achievements_and_milestone:
     type: text_textarea
     weight: 33
     region: content
@@ -115,7 +115,7 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-  field_gallery:
+  oe_cx_gallery:
     type: entity_reference_autocomplete
     weight: 34
     region: content
@@ -125,7 +125,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_impacts:
+  oe_cx_impacts:
     type: text_textarea
     weight: 32
     region: content
@@ -133,7 +133,7 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-  field_objective:
+  oe_cx_objective:
     type: text_textarea
     weight: 31
     region: content
@@ -282,7 +282,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  oe_project_lead_contributors:
+  oe_cx_project_lead_contributors:
     type: inline_entity_form_complex
     weight: 30
     region: content
