--- a/modules/oe_content_extra_project/config/overrides/core.entity_view_display.node.oe_project.default.yml
+++ b/modules/oe_content_extra_project/config/overrides/core.entity_view_display.node.oe_project.default.yml
@@ -3,10 +3,10 @@ status: true
 dependencies:
   config:
     - field.field.node.oe_project.body
-    - field.field.node.oe_project.field_achievements_and_milestone
-    - field.field.node.oe_project.field_gallery
-    - field.field.node.oe_project.field_impacts
-    - field.field.node.oe_project.field_objective
+    - field.field.node.oe_project.oe_cx_achievements_and_milestone
+    - field.field.node.oe_project.oe_cx_gallery
+    - field.field.node.oe_project.oe_cx_impacts
+    - field.field.node.oe_project.oe_cx_objective
     - field.field.node.oe_project.oe_departments
     - field.field.node.oe_project.oe_documents
     - field.field.node.oe_project.oe_featured_media
@@ -17,7 +17,7 @@ dependencies:
     - field.field.node.oe_project.oe_project_coordinators
     - field.field.node.oe_project.oe_project_dates
     - field.field.node.oe_project.oe_project_funding_programme
-    - field.field.node.oe_project.oe_project_lead_contributors
+    - field.field.node.oe_project.oe_cx_project_lead_contributors
     - field.field.node.oe_project.oe_project_locations
     - field.field.node.oe_project.oe_project_participants
     - field.field.node.oe_project.oe_project_result_files
@@ -49,14 +49,14 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
-  field_achievements_and_milestone:
+  oe_cx_achievements_and_milestone:
     type: text_default
     label: above
     settings: {  }
     third_party_settings: {  }
     weight: 29
     region: content
-  field_gallery:
+  oe_cx_gallery:
     type: entity_reference_entity_view
     label: above
     settings:
@@ -65,14 +65,14 @@ content:
     third_party_settings: {  }
     weight: 30
     region: content
-  field_impacts:
+  oe_cx_impacts:
     type: text_default
     label: above
     settings: {  }
     third_party_settings: {  }
     weight: 28
     region: content
-  field_objective:
+  oe_cx_objective:
     type: text_default
     label: above
     settings: {  }
@@ -215,7 +215,7 @@ content:
     third_party_settings: {  }
     weight: 13
     region: content
-  oe_project_lead_contributors:
+  oe_cx_project_lead_contributors:
     type: entity_reference_revisions_entity_view
     label: above
     settings:
