--- a/modules/oe_content_extra_project/oe_content_extra_project.info.yml
+++ b/modules/oe_content_extra_project/oe_content_extra_project.info.yml
@@ -15,9 +15,9 @@ config_devel:
     - field.field.node.oe_project.oe_cx_gallery
     - field.field.node.oe_project.oe_cx_impacts
     - field.field.node.oe_project.oe_cx_objective
-    - field.field.node.oe_project.oe_cx_project_lead_contributors
+    - field.field.node.oe_project.oe_cx_lead_contributors
     - field.storage.node.oe_cx_achievements_and_milestone
     - field.storage.node.oe_cx_gallery
     - field.storage.node.oe_cx_impacts
     - field.storage.node.oe_cx_objective
-    - field.storage.node.oe_cx_project_lead_contributors
+    - field.storage.node.oe_cx_lead_contributors
