OEL-1296: Translations added, test adapted.

--- a/modules/oe_content_extra_project/config/install/field.field.node.oe_project.oe_cx_lead_contributors.yml
+++ b/modules/oe_content_extra_project/config/install/field.field.node.oe_project.oe_cx_lead_contributors.yml
@@ -26,7 +26,7 @@ settings:
   handler: 'default:oe_organisation'
   handler_settings:
     target_bundles:
-      oe_stakeholder: oe_stakeholder
+      oe_cx_project_stakeholder: oe_cx_project_stakeholder
     sort:
       field: _none
       direction: ASC
