--- a/modules/oe_content_extra_project/config/install/field.field.oe_organisation.oe_cx_project_stakeholder.oe_acronym.yml
+++ b/modules/oe_content_extra_project/config/install/field.field.oe_organisation.oe_cx_project_stakeholder.oe_acronym.yml
@@ -11,7 +11,7 @@ bundle: oe_cx_project_stakeholder
 label: Acronym
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
