--- a/modules/oe_content_extra_project/config/install/field.field.oe_organisation.oe_cx_project_stakeholder.oe_address.yml
+++ b/modules/oe_content_extra_project/config/install/field.field.oe_organisation.oe_cx_project_stakeholder.oe_address.yml
@@ -13,7 +13,7 @@ bundle: oe_cx_project_stakeholder
 label: Address
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
