--- a/modules/oe_content_extra_project/config/install/field.field.oe_organisation.oe_cx_project_stakeholder.oe_logo.yml
+++ b/modules/oe_content_extra_project/config/install/field.field.oe_organisation.oe_cx_project_stakeholder.oe_logo.yml
@@ -18,7 +18,7 @@ bundle: oe_cx_project_stakeholder
 label: Logo
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
