--- a/modules/oe_content_extra_project/oe_content_extra_project.info.yml
+++ b/modules/oe_content_extra_project/oe_content_extra_project.info.yml
@@ -5,19 +5,19 @@ package: OpenEuropa
 type: module
 core_version_requirement: ^9.2
 dependencies:
-  - oe_content_extra:oe_content_extra
   - oe_content:oe_content_project
   - drupal:path
+  - oe_media_avportal:oe_media_avportal
 
 config_devel:
   install:
     - field.field.node.oe_project.oe_cx_achievements_and_milestone
     - field.field.node.oe_project.oe_cx_gallery
     - field.field.node.oe_project.oe_cx_impacts
-    - field.field.node.oe_project.oe_cx_objective
     - field.field.node.oe_project.oe_cx_lead_contributors
+    - field.field.node.oe_project.oe_cx_objective
     - field.storage.node.oe_cx_achievements_and_milestone
     - field.storage.node.oe_cx_gallery
     - field.storage.node.oe_cx_impacts
-    - field.storage.node.oe_cx_objective
     - field.storage.node.oe_cx_lead_contributors
+    - field.storage.node.oe_cx_objective
