--- a/modules/oe_content_extra_project/config/overrides/core.entity_form_display.node.oe_project.default.yml
+++ b/modules/oe_content_extra_project/config/overrides/core.entity_form_display.node.oe_project.default.yml
@@ -17,7 +17,7 @@ dependencies:
     - field.field.node.oe_project.oe_project_coordinators
     - field.field.node.oe_project.oe_project_dates
     - field.field.node.oe_project.oe_project_funding_programme
-    - field.field.node.oe_project.oe_cx_project_lead_contributors
+    - field.field.node.oe_project.oe_cx_lead_contributors
     - field.field.node.oe_project.oe_project_locations
     - field.field.node.oe_project.oe_project_participants
     - field.field.node.oe_project.oe_project_result_files
@@ -282,7 +282,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  oe_cx_project_lead_contributors:
+  oe_cx_lead_contributors:
     type: inline_entity_form_complex
     weight: 30
     region: content
