--- a/modules/oe_content_extra_project/config/install/field.field.node.oe_project.oe_cx_lead_contributors.yml
+++ b/modules/oe_content_extra_project/config/install/field.field.node.oe_project.oe_cx_lead_contributors.yml
@@ -11,6 +11,7 @@ dependencies:
 third_party_settings:
   composite_reference:
     composite: true
+    composite_revisions: false
 id: node.oe_project.oe_cx_lead_contributors
 field_name: oe_cx_lead_contributors
 entity_type: node
@@ -28,6 +29,7 @@ settings:
       oe_stakeholder: oe_stakeholder
     sort:
       field: _none
+      direction: ASC
     auto_create: false
     auto_create_bundle: ''
 field_type: entity_reference_revisions
