OEL-1296: Readme updated and config as well.

--- a/modules/oe_content_extra_project/config/install/field.field.node.oe_project.oe_cx_lead_contributors.yml
+++ b/modules/oe_content_extra_project/config/install/field.field.node.oe_project.oe_cx_lead_contributors.yml
@@ -4,7 +4,7 @@ dependencies:
   config:
     - field.storage.node.oe_cx_lead_contributors
     - node.type.oe_project
-    - oe_content_entity_organisation.oe_organisation_type.oe_stakeholder
+    - oe_content_entity_organisation.oe_organisation_type.oe_cx_project_stakeholder
   module:
     - composite_reference
     - entity_reference_revisions
