--- a/modules/oe_content_extra_project/config/install/core.entity_view_display.oe_organisation.oe_cx_project_stakeholder.default.yml
+++ b/modules/oe_content_extra_project/config/install/core.entity_view_display.oe_organisation.oe_cx_project_stakeholder.default.yml
@@ -74,7 +74,7 @@ content:
     weight: 1
     region: content
   oe_logo:
-    type: entity_reference_label
+    type: entity_reference_entity_view
     label: above
     settings:
       link: true
@@ -94,4 +94,6 @@ content:
     weight: 6
     region: content
 hidden:
+  langcode: true
+  search_api_excerpt: true
   status: true
