--- a/modules/oe_content_extra_project/config/install/oe_content_entity_organisation.oe_organisation_type.oe_cx_project_stakeholder.yml
+++ b/modules/oe_content_extra_project/config/install/oe_content_entity_organisation.oe_organisation_type.oe_cx_project_stakeholder.yml
@@ -2,5 +2,5 @@ langcode: en
 status: true
 dependencies: {  }
 id: oe_cx_project_stakeholder
-label: 'Project extra stakeholder'
+label: 'Stakeholder with budget'
 description: ''
