--- a/modules/oe_content_extra_project/config/install/core.entity_view_display.oe_organisation.oe_cx_project_stakeholder.default.yml
+++ b/modules/oe_content_extra_project/config/install/core.entity_view_display.oe_organisation.oe_cx_project_stakeholder.default.yml
@@ -77,7 +77,8 @@ content:
     type: entity_reference_entity_view
     label: above
     settings:
-      link: true
+      view_mode: default
+      link: false
     third_party_settings: {  }
     weight: 4
     region: content
@@ -94,6 +95,4 @@ content:
     weight: 6
     region: content
 hidden:
-  langcode: true
-  search_api_excerpt: true
   status: true
