--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
     "require": {
         "php": ">=7.4",
         "drupal/core": "^9.2",
-        "openeuropa/oe_content": "^3.0.0-beta11"
     },
     "require-dev": {
         "amphp/parallel-functions": "~1.0.0",
@@ -26,6 +25,7 @@
         "drush/drush": "^10.3",
         "egulias/email-validator": "^2.1.22 || ^3.0",
         "openeuropa/code-review": "^1.6 || ^2.0",
+        "openeuropa/oe_content": "^2.8.0",
         "openeuropa/task-runner-drupal-project-symlink": "^1.0.0-beta5",
         "phpspec/prophecy-phpunit": "^1 || ^2"
     },
