--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.4",
-        "drupal/core": "^9.2",
+        "drupal/core": "^9.2"
     },
     "require-dev": {
         "amphp/parallel-functions": "~1.0.0",
