OEL-2115: Drop PHP 7.4 and add 8.1.

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4",
+        "php": ">=8.0",
         "drupal/core": "^9.3"
     },
     "require-dev": {
@@ -21,10 +21,10 @@
         "drupal/field_group": "^3.2",
         "drupal/inline_entity_form": "^1.0-rc12",
         "drupal/typed_link": "^2.0",
-        "drush/drush": "^10.3",
-        "openeuropa/code-review": "^2.0",
-        "openeuropa/oe_content": "^3.0.0-alpha4",
-        "openeuropa/task-runner-drupal-project-symlink": "^1.0.0-beta5",
+        "drush/drush": "^11.1",
+        "openeuropa/code-review": "^2.0.0-alpha6",
+        "openeuropa/oe_content": "3.x-dev",
+        "openeuropa/task-runner-drupal-project-symlink": "^1.0.0-beta6",
         "phpspec/prophecy-phpunit": "^2"
     },
     "scripts": {
