--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,15 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.0",
-        "drupal/core": "^9.3"
+        "drupal/core": "^9.4 || ^10"
     },
     "require-dev": {
         "composer/installers": "^2.0",
         "drupal/address": "^1.10",
         "drupal/composite_reference": "^2.1",
         "drupal/config_devel": "^1.8",
-        "drupal/core-composer-scaffold": "^9.3",
-        "drupal/core-dev": "^9.3",
+        "drupal/core-composer-scaffold": "^9.4 || ^10",
+        "drupal/core-dev": "^9.4 || ^10",
         "drupal/description_list_field": "^1.0@alpha",
         "drupal/entity_reference_revisions": "^1.9",
         "drupal/field_group": "^3.2",
@@ -68,7 +68,8 @@
             "cweagans/composer-patches": true,
             "drupal/core-composer-scaffold": true,
             "phpro/grumphp": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true
         }
     }
 }
