--- a/.drone.yml
+++ b/.drone.yml
@@ -35,8 +35,9 @@ pipeline:
     group: prepare
     image: registry.fpfis.eu/fpfis/httpd-php:${PHP_VERSION}-ci
     volumes:
-      - /cache/${DRONE_REPO_NAME}:/cache
+      - /cache:/cache
     commands:
+      - composer self-update --2
       - composer require drupal/core:~${CORE_VERSION} drupal/core-composer-scaffold:~${CORE_VERSION} drupal/core-dev:~${CORE_VERSION} --update-with-all-dependencies --ansi --no-progress --no-interaction
 
   site-install:
@@ -65,9 +66,10 @@ pipeline:
       status: failure
 
 matrix:
-  CORE_VERSION:
-    - 9.4.0
-    - 9.5.0
-  PHP_VERSION:
-    - 8.0
-    - 8.1
+  include:
+    - CORE_VERSION: 9.4.0
+      PHP_VERSION: 8.0
+    - CORE_VERSION: 9.4.0
+      PHP_VERSION: 8.1
+    - CORE_VERSION: 10.0
+      PHP_VERSION: 8.1
