--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,16 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.0",
-        "drupal/core": "^9.4 || ^10"
+        "php": ">=8.1",
+        "drupal/core": "^10.1 || ^10.2"
     },
     "require-dev": {
         "composer/installers": "^2.0",
         "drupal/address": "^1.10",
         "drupal/composite_reference": "^2.1",
         "drupal/config_devel": "^1.9",
-        "drupal/core-composer-scaffold": "^9.4 || ^10",
-        "drupal/core-dev": "^9.4 || ^10",
+        "drupal/core-composer-scaffold": "^10.1 || ^10.2",
+        "drupal/core-dev": "^10.1 || ^10.2",
         "drupal/description_list_field": "^1.0.0-alpha5",
         "drupal/entity_reference_revisions": "^1.9",
         "drupal/field_group": "^3.2",
@@ -69,7 +69,8 @@
             "drupal/core-composer-scaffold": true,
             "phpro/grumphp": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "php-http/discovery": false
         }
     }
 }
