--- a/composer.json
+++ b/composer.json
@@ -7,20 +7,20 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
-        "drupal/core": "^10.1 || ^10.2"
+        "drupal/core": "^10.2"
     },
     "require-dev": {
         "composer/installers": "^2.0",
         "drupal/address": "^1.10",
         "drupal/composite_reference": "^2.1",
         "drupal/config_devel": "^1.9",
-        "drupal/core-composer-scaffold": "^10.1 || ^10.2",
-        "drupal/core-dev": "^10.1 || ^10.2",
+        "drupal/core-composer-scaffold": "^10",
+        "drupal/core-dev": "^10",
         "drupal/description_list_field": "^1.0.0-alpha5",
         "drupal/entity_reference_revisions": "^1.9",
         "drupal/field_group": "^3.2",
         "drupal/typed_link": "^2.0.1",
-        "drush/drush": "^11.1",
+        "drush/drush": "^12.4",
         "openeuropa/code-review": "^2.0.0-alpha6",
         "openeuropa/oe_content": "^3.0.0-alpha11",
         "openeuropa/task-runner-drupal-project-symlink": "^1.0.0-beta6",
@@ -58,6 +58,18 @@
         "drupal-scaffold": {
             "locations": {
                 "web-root": "./build"
+            }
+        },
+        "patches": {
+            "drupal/core": {
+                "https://www.drupal.org/project/drupal/issues/2230909": "https://www.drupal.org/files/issues/2023-12-21/2230909-309.patch"
+            }
+        },
+        "patches-ignore": {
+            "openeuropa/oe_content": {
+                "drupal/core": {
+                    "https://www.drupal.org/project/drupal/issues/2230909": "https://www.drupal.org/files/issues/2022-07-26/2230909-269.patch"
+                }
             }
         }
     },
