--- a/.drone.yml
+++ b/.drone.yml
@@ -38,7 +38,8 @@ pipeline:
       - /cache:/cache
     commands:
       # Change the patch for 10.1.x.
-      - composer config --merge --json "extra.patches.drupal/core" '{"https://www.drupal.org/project/drupal/issues/2230909": "https://www.drupal.org/files/issues/2022-07-26/2230909-269.patch"}'
+      - >
+        composer config --merge --json "extra.patches.drupal/core" '{"https://www.drupal.org/project/drupal/issues/2230909": "https://www.drupal.org/files/issues/2022-07-26/2230909-269.patch"}'
     when:
       matrix:
         CORE_VERSION: "10.1"
