--- a/oe_content_extra.info.yml
+++ b/oe_content_extra.info.yml
@@ -3,6 +3,6 @@ description: Contains code and field storages shared with submodules.
 package: OpenEuropa
 
 type: module
-core_version_requirement: ^9.4 || ^10
+core_version_requirement: ^10
 dependencies:
   - oe_content:oe_content
