--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "drupal/typed_link": "^2.0.1",
         "drush/drush": "^12.4",
         "openeuropa/code-review": "^2.0.0-alpha6",
-        "openeuropa/oe_content": "^3.0.0-alpha11",
+        "openeuropa/oe_content": "^3.0",
         "openeuropa/task-runner-drupal-project-symlink": "^1.0.0-beta6",
         "phpspec/prophecy-phpunit": "^2"
     },
@@ -58,18 +58,6 @@
         "drupal-scaffold": {
             "locations": {
                 "web-root": "./build"
-            }
-        },
-        "patches": {
-            "drupal/core": {
-                "https://www.drupal.org/project/drupal/issues/2230909": "https://www.drupal.org/files/issues/2023-12-21/2230909-309.patch"
-            }
-        },
-        "patches-ignore": {
-            "openeuropa/oe_content": {
-                "drupal/core": {
-                    "https://www.drupal.org/project/drupal/issues/2230909": "https://www.drupal.org/files/issues/2022-07-26/2230909-269.patch"
-                }
             }
         }
     },
