--- a/modules/oe_content_extra_project/oe_content_extra_project.info.yml
+++ b/modules/oe_content_extra_project/oe_content_extra_project.info.yml
@@ -3,7 +3,7 @@ description: Contains the EC Content Extra Project fields.
 package: OpenEuropa
 
 type: module
-core_version_requirement: ^9.4 || ^10
+core_version_requirement: ^10
 dependencies:
   - drupal:path
   - oe_content:oe_content_project
