OEL-2504: Add an optional title, description and image on the listing page.

--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -28,6 +28,7 @@ drupal:
     - "./vendor/bin/drush en config_devel -y"
     - "./vendor/bin/drush en oe_content_extra -y"
     - "./vendor/bin/drush en oe_content_extra_project -y"
+    - "./vendor/bin/drush en oe_content_extra_list_pages -y"
     - "./vendor/bin/drush cr"
   settings:
     settings:
@@ -54,3 +55,8 @@ commands:
     - { task: "run", command: "setup:phpunit" }
   setup:phpunit:
     - { task: "process", source: "phpunit.xml.dist", destination: "phpunit.xml" }
+  ci:site-setup:
+    - task: "append"
+      file: "build/sites/default/settings.php"
+      text: |
+        $settings['extension_discovery_scan_tests'] = TRUE;
