--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drush/drush": "^12.4",
         "openeuropa/code-review": "^2.0.0-alpha6",
         "openeuropa/oe_content": "^3",
+        "openeuropa/oe_list_pages": "^1.7",
         "openeuropa/task-runner-drupal-project-symlink": "^1.0.0-beta6",
         "phpspec/prophecy-phpunit": "^2"
     },
@@ -43,7 +44,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Drupal\\Tests\\oe_content_extra\\": "./tests/src"
+            "Drupal\\Tests\\oe_content_extra_project\\": "./modules/oe_content_extra_project/tests/src/",
+            "Drupal\\Tests\\oe_content_extra_list_pages\\": "./modules/oe_content_extra_list_pages/tests/src/"
         }
     },
     "extra": {
