--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,7 @@
   </php>
   <testsuites>
     <testsuite name="OpenEuropa Content Extra">
-      <directory>./tests/src/</directory>
+       <directory>./modules/**/tests/src/</directory>
     </testsuite>
   </testsuites>
 </phpunit>
